--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@adonisjs/websocket": "^1.0.12",
     "adonis-acl": "^1.1.1",
     "adonis-bumblebee": "^2.0.0",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "umi-request": "^1.2.5"
   },
   "devDependencies": {},
   "autoload": {
